--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -22,8 +22,8 @@
   <link rel="shortcut icon" href="https://b.yzcdn.cn/v2/image/yz_fc.ico">
   <title>发现朋友圈的推荐</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <!-- <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/index.css"> -->
 </head>
 
 <body class=" " style="min-height: 860px;">
@@ -86,8 +86,9 @@
       </div>
       <div class="js-show-find category-guid" style="display: none;"></div>
     </div>
+      <Foot></Foot>
   </div>
-  <Foot></Foot>
+
   <!-- <div class="bottom-nav">
     <ul>
       <li class="active"><a href="https://maijia.youzan.com/mars/homepage"><i class="icon-home"></i><div>有赞</div></a></li>
