--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -71,12 +71,13 @@
         >
           <li v-for="list in lists" :key="list.id">
             <div class="goods-item">
-              <a href="https://h5.youzan.com/v2/showcase/goods?alias=2fwig6rnqfq6m&amp;source=yzapp&amp;f_platform=yzapp">
+              <a :href="'goods.html?id='+list.id">
                 <div class="thumb img-box">
                   <img class="fadeIn" v-bind:src="list.img"/>
+                </div>  
                 <div class="detail">
                   <div class="title">{{list.name}}</div>
-                  <div class="price">￥{{list.price}}</div>
+                  <div class="price">￥{{list.price|currency}}</div>
                 </div>
               </a>
             </div>
