完成购物车功能

--- a/src/pages/goods/goods.html
+++ b/src/pages/goods/goods.html
@@ -20,7 +20,9 @@
   <link rel="stylesheet" href="./css/goods_mars.css">
   <link rel="stylesheet" href="./css/goods_sku.css"> -->
   <style>
-  [v-cloak] { display: none }
+    [v-cloak] {
+       display: none
+    }
   </style>
 </head>
 
