--- a/src/pages/member/member.html
+++ b/src/pages/member/member.html
@@ -15,10 +15,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- <link rel="stylesheet" href="./css/member_base.css">
   <link rel="stylesheet" href="./css/member.css"> -->
+  <style>
+    [v-cloak] {
+      display: none;
+    }
+  </style>
 </head>
 
 <body class=" ">
-  <div class="container " style="min-height: 581px;">
+  <div class="container " style="min-height: 581px;" v-cloak>
     <div class="content">
       <div class="user-infos">
         <div class="pull-left avatar">
