--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -24,10 +24,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/index.css"> -->
+  <style>
+    [v-cloak] {
+      display: none;
+    }
+  </style>
 </head>
 
 <body class=" " style="min-height: 860px;">
-  <div id="app">
+  <div id="app" v-cloak>
   <div class="container with-bottom-nav" style="min-height: 667px;">
     <div class="content">
       <!-- <div class="js-image-swiper custom-image-swiper  custom-image-swiper-single" data-images="1"> -->
